sync with upstrean; clean build